--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="hero__bg"></div>
                 <div class="container">
                     <div class="hero__content">
-                        <p class="hero__tagline">Faça a transformação digital com IA</p>
+                        <p class="hero__tagline">Acelere vendas e reduza esforço com operações guiadas por IA</p>
                         <h1 class="hero__title">
                             O motor digital que combina 
                             <span class="gradient-text">Automação, IA e Estratégia</span> 
