--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <p class="service-card__description">
                                 Landing pages e sites modernos entregues em 5–10 dias.
                             </p>
-                            <a href="https://wa.me/5511959029428?text=Ol%C3%A1!%20Vim%20pelo%20site%20da%20Tullu%20Motion.%20Quero%20alavancar%20meu%20neg%C3%B3cio!" class="btn btn--secondary" target="_blank">
+                            <a href="weblab.html" class="btn btn--secondary">
                                 Saber mais
                             </a>
                         </div>
@@ -279,7 +279,7 @@
                             <p class="service-card__description">
                                 Automação de funis, atendimento e dados.
                             </p>
-                            <a href="https://wa.me/5511999999999?text=Quero%20saber%20mais%20sobre%20o%20Cobra" class="btn btn--secondary" target="_blank">
+                            <a href="cobra.html" class="btn btn--secondary">
                                 Saber mais
                             </a>
                         </div>
@@ -296,7 +296,7 @@
                             <p class="service-card__description">
                                 Meta Ads e Google Ads com foco em conversão.
                             </p>
-                            <a href="https://wa.me/5511999999999?text=Quero%20saber%20mais%20sobre%20o%20Growth" class="btn btn--secondary" target="_blank">
+                            <a href="growth.html" class="btn btn--secondary">
                                 Saber mais
                             </a>
                         </div>
@@ -313,7 +313,7 @@
                             <p class="service-card__description">
                                 Primeira solução: ClinicBot para clínicas odontológicas.
                             </p>
-                            <a href="https://wa.me/5511999999999?text=Quero%20saber%20mais%20sobre%20o%20AI%20Studio" class="btn btn--secondary" target="_blank">
+                            <a href="aistudio.html" class="btn btn--secondary">
                                 Saber mais
                             </a>
                         </div>
