--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 Landing pages e sites modernos entregues em 5–10 dias.
                             </p>
                             <a href="weblab.html" class="btn btn--secondary">
-                                Saber mais
+                                Criar meu site
                             </a>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                                 Automação de funis, atendimento e dados.
                             </p>
                             <a href="cobra.html" class="btn btn--secondary">
-                                Saber mais
+                                Automatizar operação
                             </a>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                                 Meta Ads e Google Ads com foco em conversão.
                             </p>
                             <a href="growth.html" class="btn btn--secondary">
-                                Saber mais
+                                Alavancar
                             </a>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                                 Primeira solução: ClinicBot para clínicas odontológicas.
                             </p>
                             <a href="aistudio.html" class="btn btn--secondary">
-                                Saber mais
+                                Explorar soluções inteligentes
                             </a>
                         </div>
                     </div>
