--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 Meta Ads e Google Ads com foco em conversão.
                             </p>
                             <a href="growth.html" class="btn btn--secondary">
-                                Alavancar
+                                Alavancar meu negócio
                             </a>
                         </div>
                     </div>
