--- a/index.html
+++ b/index.html
@@ -319,7 +319,25 @@
                         </div>
                     </div>
                 </div>
+                <!-- PlayLab -->
+<div class="service-card">
+    <div class="service-card__icon">
+        <img src="assets/img/playlab.png" alt="Tullu PlayLab">
+    </div>
+    <div class="service-card__content">
+        <h3 class="service-card__title">PlayLab</h3>
+        <p class="service-card__tagline">Experiências gamificadas que capturam leads e encantam públicos.</p>
+        <p class="service-card__description">
+            Games personalizados para eventos, feiras e campanhas.
+        </p>
+        <a href="playlab.html" class="btn btn--secondary">
+            Ver demo do PlayLab
+        </a>
+    </div>
+</div>
+
             </div>
+            
         </section>
 
         <!-- Como Funciona Section -->
