--- a/weblab.html
+++ b/weblab.html
@@ -155,6 +155,38 @@
                 </div>
             </div>
         </section>
+<!-- Últimas entregas do WebLab -->
+<section class="weblab-showcase" id="entregas">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">Últimas entregas do WebLab</h2>
+      <p class="section__subtitle">Criações reais feitas para negócios que decidiram acelerar com automação.</p>
+    </div>
+
+    <div class="showcase__grid">
+      <!-- Card 1 -->
+      <div class="showcase-card" onclick="window.open('artesdasi.html', '_blank')">
+        <div class="showcase-frame">
+          <iframe src="artesdasi.html" loading="lazy"></iframe>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="showcase-card" onclick="window.open('exemplo2.html', '_blank')">
+        <div class="showcase-frame">
+          <iframe src="exemplo2.html" loading="lazy"></iframe>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="showcase-card" onclick="window.open('exemplo3.html', '_blank')">
+        <div class="showcase-frame">
+          <iframe src="exemplo3.html" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
         <!-- Process Section -->
         <section class="process process--branch" id="como-funciona">
