--- a/weblab.html
+++ b/weblab.html
@@ -159,29 +159,31 @@
 <section class="weblab-showcase" id="entregas">
   <div class="container">
     <div class="section__header">
-      <h2 class="section__title">Últimas entregas do WebLab</h2>
-      <p class="section__subtitle">Criações reais feitas para negócios que decidiram acelerar com automação.</p>
+      <h2 class="section__title">Criações em destaque do WebLab</h2>
+      <p class="section__subtitle">
+        Sites reais desenvolvidos para marcas que decidiram acelerar com automação e design inteligente.
+      </p>
     </div>
 
     <div class="showcase__grid">
-      <!-- Card 1 -->
-      <div class="showcase-card" onclick="window.open('artesdasi.html', '_blank')">
+      <!-- Card 1: Artes da Si -->
+      <div class="showcase-card" onclick="window.open('https://artesdasi.github.io/acesse/', '_blank')">
         <div class="showcase-frame">
-          <iframe src="artesdasi.html" loading="lazy"></iframe>
+          <iframe src="https://artesdasi.github.io/acesse/" loading="lazy"></iframe>
         </div>
       </div>
 
-      <!-- Card 2 -->
-      <div class="showcase-card" onclick="window.open('exemplo2.html', '_blank')">
+      <!-- Card 2: Site fictício (exemplo 1) -->
+      <div class="showcase-card" onclick="window.open('https://rhyan1207.github.io/exemplo-site1/', '_blank')">
         <div class="showcase-frame">
-          <iframe src="exemplo2.html" loading="lazy"></iframe>
+          <iframe src="https://legitimuz-eeqmzp.manus.space/" loading="lazy"></iframe>
         </div>
       </div>
 
-      <!-- Card 3 -->
-      <div class="showcase-card" onclick="window.open('exemplo3.html', '_blank')">
+      <!-- Card 3: Site fictício (exemplo 2) -->
+      <div class="showcase-card" onclick="window.open('https://rhyan1207.github.io/exemplo-site2/', '_blank')">
         <div class="showcase-frame">
-          <iframe src="exemplo3.html" loading="lazy"></iframe>
+          <iframe src="https://casateruya.com.br/" loading="lazy"></iframe>
         </div>
       </div>
     </div>
