--- a/weblab.html
+++ b/weblab.html
@@ -175,14 +175,14 @@
 
 
       <!-- Card 2: Site fictício (exemplo 1) -->
-      <div class="showcase-card" onclick="window.open('https://rhyan1207.github.io/exemplo-site1/', '_blank')">
+      <div class="showcase-card" onclick="window.open('https://legitimuz-eeqmzp.manus.space/', '_blank')">
         <div class="showcase-frame">
           <iframe src="https://legitimuz-eeqmzp.manus.space/" loading="lazy"></iframe>
         </div>
       </div>
 
       <!-- Card 3: Site fictício (exemplo 2) -->
-      <div class="showcase-card" onclick="window.open('https://rhyan1207.github.io/exemplo-site2/', '_blank')">
+      <div class="showcase-card" onclick="window.open('https://casateruya.com.br/', '_blank')">
         <div class="showcase-frame">
           <iframe src="https://casateruya.com.br/" loading="lazy"></iframe>
         </div>
