--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <!-- HERO -->
         <section class="hero" id="hero">
             <div class="hero__bg"></div>
+            <div class="hero__bubbles">
+  <span></span><span></span><span></span><span></span><span></span>
+</div>
+
             <div class="container">
                 <div class="hero__content">
                     <p class="hero__tagline">Chega de perder vendas por falha no atendimento</p>
