Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             Agente de IA personalizado + CRM de agendamentos e atendimentos — visualize tudo em um painel e deixe o WhatsApp trabalhar por você.
           </p>
           <div class="tag tag--hot" aria-label="rótulo de destaque">
-            Esta é a solução mais vendida — <strong>uma solução AI Studio</strong>
+            <strong>Uma solução do AI Studio</strong>
           </div>
         </header>
 
@@ -111,7 +111,7 @@
 
         <div class="demo__cta">
           <!-- CTA destacado com cor diferente (btn--accent) -->
-          <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar gratuitamente</a>
+          <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar GRÁTIS!</a>
           <small class="demo__note">É só plugar o WhatsApp!</small>
           <div class="demo__subtags">
             <span class="tag">Atendimento 24/7</span>
@@ -136,7 +136,7 @@
           <p class="section__subtitle">
             Visualize agendamentos, conversas, status e resultados em um só lugar. Sem atrito, sem planilhas soltas.
           </p>
-          <div class="tag tag--ai">Uma solução AI Studio</div>
+          <div class="tag tag--ai">Custa menos que um jovem aprendiz!</div>
         </header>
 
         <figure class="showcase__frame">
