--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
           <h2 class="section__title">Veja o painel em tempo real</h2>
           <p class="section__subtitle">
             Visualize agendamentos, conversas, status e resultados em um só lugar. Sem atrito, sem planilhas soltas.
-          </p> <br><br>
-          <div class="tag tag--ai">Custa menos que um jovem aprendiz!</div>
+          </p> <br>
+          <div class="tag tag--ai">Custa <strong>menos</strong> que um jovem aprendiz!</div>
         </header>
 
         <figure class="showcase__frame">
