--- a/index.html
+++ b/index.html
@@ -394,130 +394,107 @@
 
   <script src="assets/js/main.js"></script>
 <script>
-/* Diagnóstico rápido — versão robusta */
 document.addEventListener("DOMContentLoaded", () => {
   const form = document.getElementById("diagnostic-form");
   const progressBar = document.querySelector(".diagnostic__progress-bar");
   const resultSection = document.getElementById("diag-result");
   const planContainer = document.getElementById("diag-plan");
   const primaryCTA = document.getElementById("diag-primary-cta");
-
-  if (!form || !progressBar || !resultSection || !planContainer || !primaryCTA) {
-    console.warn("[Diagnóstico] Elementos obrigatórios não encontrados.");
-    return;
-  }
+  if (!form || !progressBar || !resultSection || !planContainer || !primaryCTA) return;
 
   const steps = [...form.querySelectorAll(".diag-step")];
   let currentStep = 0;
-  const totalSteps = steps.length;
 
-  // Utilidades
-  const scrollInto = (el) => {
-    try { el.scrollIntoView({ behavior: "smooth", block: "start" }); } catch {}
-  };
+  const getNextBtn = () => steps[currentStep].querySelector("[data-next]");
+  const getPrevBtn = () => steps[currentStep].querySelector("[data-prev]");
+  const answered = (stepEl) => !!stepEl.querySelector(".chip.chip--selected");
+
+  const scrollInto = (el) => { try { el.scrollIntoView({behavior:"smooth", block:"start"});} catch{} };
 
   function updateProgress() {
-    const percent = totalSteps > 1 ? Math.round((currentStep) / (totalSteps - 1) * 100) : 100;
-    progressBar.style.width = percent + "%";
+    const pct = steps.length > 1 ? Math.round((currentStep)/(steps.length-1)*100) : 100;
+    progressBar.style.width = pct + "%";
   }
 
-  function showStep(index) {
-    steps.forEach((step, i) => {
-      step.hidden = i !== index;
-      if (!step.hidden) step.setAttribute("aria-current", "step");
-      else step.removeAttribute("aria-current");
-    });
+  function setNextState(){
+    const nextBtn = getNextBtn();
+    if (!nextBtn) return;
+    nextBtn.disabled = !answered(steps[currentStep]);
+    nextBtn.setAttribute("aria-disabled", String(nextBtn.disabled));
+  }
+
+  function showStep(idx){
+    steps.forEach((s,i)=>{ s.hidden = i!==idx; s.toggleAttribute("aria-current", i===idx); });
     updateProgress();
+    setNextState();
     scrollInto(form.closest(".diagnostic__wrap") || form);
-    // Foco acessível no primeiro item clicável do step
-    const firstChip = steps[index].querySelector(".chip");
-    if (firstChip) firstChip.focus({ preventScroll: true });
+    const focusable = steps[idx].querySelector(".chip, [data-next], [data-prev]");
+    if (focusable) focusable.focus({preventScroll:true});
   }
 
-  function selectInStep(name, value) {
+  function selectInStep(name, value){
     const group = form.querySelectorAll(`.chip[data-name="${name}"]`);
-    group.forEach(c => c.classList.remove("chip--selected"));
+    group.forEach(c => { c.classList.remove("chip--selected"); c.setAttribute("aria-pressed","false"); });
     const chosen = form.querySelector(`.chip[data-name="${name}"][data-value="${value}"]`);
-    if (chosen) {
+    if (chosen){
       chosen.classList.add("chip--selected");
-      // marca step como respondido
-      chosen.closest(".diag-step")?.setAttribute("data-answered", "true");
+      chosen.setAttribute("aria-pressed","true");
+      chosen.closest(".diag-step")?.setAttribute("data-answered","true");
+      setNextState(); // habilita o botão imediatamente
     }
   }
 
-  function stepHasAnswer(stepEl) {
-    return !!stepEl.querySelector(".chip.chip--selected");
-  }
-
-  // Delegação de eventos
-  form.addEventListener("click", (e) => {
+  // Delegação
+  form.addEventListener("click", (e)=>{
     const chip = e.target.closest(".chip");
-    if (chip && form.contains(chip)) {
+    if (chip && form.contains(chip)){
       e.preventDefault();
       selectInStep(chip.dataset.name, chip.dataset.value);
       return;
     }
 
-    if (e.target.closest("[data-next]")) {
+    if (e.target.closest("[data-next]")){
       e.preventDefault();
-      // exige resposta do passo atual
-      const curEl = steps[currentStep];
-      if (!stepHasAnswer(curEl)) {
-        curEl.classList.add("shake-warn");
-        setTimeout(() => curEl.classList.remove("shake-warn"), 400);
+      if (!answered(steps[currentStep])){
+        steps[currentStep].classList.add("shake-warn");
+        setTimeout(()=>steps[currentStep].classList.remove("shake-warn"), 380);
         return;
       }
-      if (currentStep < totalSteps - 1) {
-        currentStep++;
-        showStep(currentStep);
-      }
+      if (currentStep < steps.length-1){ currentStep++; showStep(currentStep); }
       return;
     }
 
-    if (e.target.closest("[data-prev]")) {
+    if (e.target.closest("[data-prev]")){
       e.preventDefault();
-      if (currentStep > 0) {
-        currentStep--;
-        showStep(currentStep);
-      }
+      if (currentStep>0){ currentStep--; showStep(currentStep); }
       return;
     }
   });
 
-  // Enter navega como "próximo" quando um chip está focado
-  form.addEventListener("keydown", (e) => {
-    if (e.key === "Enter") {
-      const activeChip = document.activeElement?.classList?.contains("chip");
-      if (activeChip) {
-        e.preventDefault();
-        const curEl = steps[currentStep];
-        if (!stepHasAnswer(curEl)) return; // precisa selecionar primeiro (com clique)
-        if (currentStep < totalSteps - 1) {
-          currentStep++;
-          showStep(currentStep);
-        }
+  // Enter avança se já houver seleção
+  form.addEventListener("keydown",(e)=>{
+    if (e.key==="Enter" && document.activeElement?.classList?.contains("chip")){
+      e.preventDefault();
+      if (answered(steps[currentStep]) && currentStep < steps.length-1){
+        currentStep++; showStep(currentStep);
       }
     }
   });
 
   // Submit
-  form.addEventListener("submit", (e) => {
+  form.addEventListener("submit",(e)=>{
     e.preventDefault();
-
-    // garante resposta no último passo
-    if (!stepHasAnswer(steps[currentStep])) {
+    if (!answered(steps[currentStep])){
       steps[currentStep].classList.add("shake-warn");
-      setTimeout(() => steps[currentStep].classList.remove("shake-warn"), 400);
+      setTimeout(()=>steps[currentStep].classList.remove("shake-warn"), 380);
       return;
     }
 
-    // coleta respostas
+    // Coleta
     const answers = {};
-    form.querySelectorAll(".chip--selected").forEach(chip => {
-      answers[chip.dataset.name] = chip.dataset.value;
-    });
+    form.querySelectorAll(".chip--selected").forEach(ch => { answers[ch.dataset.name] = ch.dataset.value; });
 
-    // roteamento
+    // Roteamento
     if (answers.prioridade === "site_rapido") {
       planContainer.innerHTML = `
         <h4 class="diag-plan__name">Plano WebLab</h4>
@@ -566,7 +543,11 @@ document.addEventListener("DOMContentLoaded", () => {
     scrollInto(resultSection);
   });
 
-  // inicia
+  // Inicializa: garante botões como type="button" se não vierem no HTML
+  form.querySelectorAll("[data-next],[data-prev]").forEach(b=>{
+    if (!b.hasAttribute("type")) b.setAttribute("type","button");
+  });
+
   showStep(currentStep);
 });
 </script>
