--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         </div>
 
         <div class="demo__cta">
-          <!-- CTA destacado com cor diferente (btn--accent) -->
+          <!-- CTA destacado com cor diferente (btn--accent) --><br>
           <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar GRÁTIS!</a>
-          <small class="demo__note">É só plugar o WhatsApp!</small>
+          <small class="demo__note">É só plugar o WhatsApp!</small><br>
           <div class="demo__subtags">
             <span class="tag">Atendimento 24/7</span>
             <span class="tag">Agendamento automático</span>
