--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
         <figure class="showcase__frame">
           <!-- troque a imagem abaixo pelo print do seu White Label -->
-          <img src="assets/img/print-whitelabel.jpg" alt="Print do painel de CRM e agente em funcionamento" class="showcase__img"/>
+          <img src="assets/img/print-whitelabel.png" alt="Print do painel de CRM e agente em funcionamento" class="showcase__img"/>
           <figcaption class="sr-only">Exemplo do painel com agendamentos e conversas integradas ao WhatsApp</figcaption>
         </figure>
 
