--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="demo__cta">
-          <!-- CTA destacado com cor diferente (btn--accent) --><br>
+          <!-- CTA destacado com cor diferente (btn--accent) --><br><br>
           <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar GRÁTIS!</a>
           <small class="demo__note">É só plugar o WhatsApp!</small><br>
           <div class="demo__subtags">
